--- a/insights/templates/home.html
+++ b/insights/templates/home.html
@@ -63,8 +63,9 @@
     <h1>NFL Research Tools</h1>
     <p>Below are the supported tools available</b>
     <ul>
-      <li><a href="/nfl_research/nfl-stats">NFL Stats</a></li>
-      <li><a href="/nfl_research/data-downloader">Data Downloader</a></li>
+      <li><a href="/nfl_research/showdown">NFL Showdown Dominator</a></li>
+      <!-- li><a href="/nfl_research/nfl-stats">NFL Stats</a></li -->
+      <!-- li><a href="/nfl_research/data-downloader">Data Downloader</a></li -->
     </ul>
 
   </body>
